Remove py32 and verbose flags

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 # WISHLIST_envlist = py24,py25,py26,py27,py31,py32,pypy,jython
-envlist = py25, py26, py27, pypy1.5, pypy1.6, py32
+envlist = py25, py26, py27, pypy1.5, pypy1.6
 
 [testenv]
-commands = py.test -v tests
+commands = py.test tests
 
 [testenv:pypy1.5]
 basepypy=/opt/pypy1.5/bin/pypy
