--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 # WISHLIST_envlist = py24,py25,py26,py27,py31,py32,pypy,jython
-envlist = py25, py26, py27, pypy1.5, pypy1.6
+envlist = py25, py26, py27, py32, pypy1.5, pypy1.6
 
 [testenv]
 commands = py.test tests
